--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,26 @@
-# docker-compose.yml - placeholder for Docker compose file
+version: '3.8'
+
+services:
+  app:
+    build: .
+    ports:
+      - "8080:8080"
+    environment:
+      - DATABASE_URL=postgres://trough:trough@db:5432/trough?sslmode=disable
+    volumes:
+      - ./uploads:/app/uploads
+      - ./config.yaml:/app/config.yaml:ro
+    depends_on:
+      - db
+
+  db:
+    image: postgres:15-alpine
+    environment:
+      - POSTGRES_USER=trough
+      - POSTGRES_PASSWORD=trough
+      - POSTGRES_DB=trough
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
